src/test/ui/cycle-projection-based-on-where-clause.stderr
error[E0391]: cycle detected when computing the bounds for type parameter `T`
  --> $DIR/cycle-projection-based-on-where-clause.rs:17:19
   |
LL |           T : Add<T::Item>
   |                   ^^^^^^^
   |
   = note: ...which again requires computing the bounds for type parameter `T`, completing the cycle
note: cycle used when computing explicit predicates of `A`
  --> $DIR/cycle-projection-based-on-where-clause.rs:17:19
   |
LL |           T : Add<T::Item>
   |                   ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
